Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-39543

All phosphor TRACE statements generate "Empty statement" warning

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 7.0.0
    • Cheshire-Cat
    • phosphor
    • Untriaged
    • 1
    • Unknown

    Description

      When the macros is used like a statement with a trailing semicolon the expanded code ends up looking like something like:

          if (....) {
          };
      

      The trailing semicolon is the reason why we get the warning.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty