MB-39543: Remove trailing ; from TRACE_LOCKGUARD[_TIMED]

When the macro ends with a trailing semicolon it'll end up
with two semicolons causing an empty statement warning:

    TRACE_LOCKGUARD_TIMED(thread.mutex,
                          "mutex",
                          "Connection::rw_callback::threadLock",
                          SlowMutexThreshold);

expands to:

    static std::atomic<const phosphor::AtomicCategoryStatus*> phosphor_internal_category_enabled_739; const phosphor::AtomicCategoryStatus* phosphor_internal_category_enabled_temp_739 = phosphor_internal_category_enabled_739 .load(std::memory_order_acquire); constexpr static phosphor::tracepoint_info phosphor_internal_tpi_wait_739 = {
    "mutex"
    ,
    "Connection::rw_callback::threadLock"
    ".wait", phosphor::TraceEvent::Type::Complete, {{"this", ""}}, {{phosphor::TraceArgumentConversion<void*>::getType(), phosphor::TraceArgumentConversion<phosphor::NoneType>::getType()}}};; constexpr static phosphor::tracepoint_info phosphor_internal_tpi_held_739 = {
    "mutex"
    ,
    "Connection::rw_callback::threadLock"
    ".held", phosphor::TraceEvent::Type::Complete, {{"", ""}}, {{phosphor::TraceArgumentConversion<void*>::getType(), phosphor::TraceArgumentConversion<phosphor::NoneType>::getType()}}};; if (__builtin_expect(!!(!phosphor_internal_category_enabled_temp_739), 0)) { phosphor_internal_category_enabled_temp_739 = &phosphor::TraceLog::getInstance().getCategoryStatus(
    "mutex"
    ); phosphor_internal_category_enabled_739 .store(phosphor_internal_category_enabled_temp_739, std::memory_order_release); } phosphor::MutexEventGuard<decltype(
    thread.mutex
    )> phosphor_internal_guard_739( &phosphor_internal_tpi_wait_739, &phosphor_internal_tpi_held_739, phosphor_internal_category_enabled_temp_739 ->load(std::memory_order_acquire) != phosphor::CategoryStatus::Disabled,
    thread.mutex
    ,
    SlowMutexThreshold
    );
                                            ;

Change-Id: I2506e105d028ed2ea8939d657a682a155bde96a3
Reviewed-on: http://review.couchbase.org/c/phosphor/+/134880
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>